# pay

backend/: .env.example  README.md  locus.ipynb  pyproject.toml  tiktok.ipynb
backend/pay/: __init__.py  hello.py  model.py  server.py  synced.py  tiktok.py
backend/pay/agents/: payout_agent.py  post_evaluation_agent.py
frontend/: openapi-ts.config.ts  package-lock.json  package.json
frontend/src/: App.tsx  index.css  store-config.ts  synced-store.ts
frontend/src/components/: app-sidebar.tsx  version-switcher.tsx
frontend/src/sync-client/: schemas.gen.ts  types.gen.ts  zod.gen.ts
hello-locus/: .gitignore  README.md  package-lock.json  package.json
