[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "openai>=2.8.0",
    "tiktokapi>=7.2.1",
    "ws-sync",
]

[tool.uv.sources]
ws-sync = { git = "https://github.com/JoongWonSeo/ws-sync.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
